#  Copyright: (C) 2017 iCub Facility, Istituto Italiano di Tecnologia
#  Authors: Alberto Cardellino <alberto.cardellino@iit.it>
#
#  Copy Policy: Released under the terms of the LGPLv2.1 or later, see LGPL.TXT
#

#
# Add here subdirectories for different skeletons example
#

add_subdirectory(cpp)

# add_subdirectory(lua)
# add_subdirectory(python)
# add_subdirectory(...)

