CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(PROJECTNAME testClock)
PROJECT(${PROJECTNAME})

FIND_PACKAGE(YARP REQUIRED)
LIST(APPEND CMAKE_MODULE_PATH ${YARP_MODULE_PATH})

SET(sources main.cpp)
SOURCE_GROUP("Source Files" FILES ${sourcea})


INCLUDE_DIRECTORIES(${YARP_INCLUDE_DIRS})
ADD_EXECUTABLE(${PROJECTNAME} ${sources})
TARGET_LINK_LIBRARIES(${PROJECTNAME} ${YARP_LIBRARIES})

ADD_EXECUTABLE(publisher publisher.cpp)
TARGET_LINK_LIBRARIES(publisher ${YARP_LIBRARIES})
