CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(test_concurrencymultiplejointcalls)

FIND_PACKAGE(YARP REQUIRED)
LIST(APPEND CMAKE_MODULE_PATH ${YARP_MODULE_PATH})

SET(sources main.cpp)
SOURCE_GROUP("Source Files" FILES ${sourcea})

INCLUDE_DIRECTORIES(${YARP_INCLUDE_DIRS})
ADD_EXECUTABLE(${PROJECT_NAME} ${sources})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${YARP_LIBRARIES})

install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
